--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,9 +14,19 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙. (2020).
+    春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
+    \textit{上海城市规划}. \textit{05}, 22-29.
+    \DOI{10.11982/j.supr.20200504}. [复合影响因子=1.865] 
+\item
+    P. Jia, \Shaoqing,K. E. Rohli, R.V. Rohli, YN. Ma, C. Yu, XF. Pan, WQ. Zhou. (2020).
+    Natural environment and childhood obesity: A systematic review.
+    \textit{Obesity Reviews}. 1-9.
+    \DOI{10.1111/obr.13097}. [SCI, IF = 7.31]
+\item
     XF. Pan, H. Li, LX. Zhao, XR. Yang, JQ. Su, \Shaoqing, J. Ning, CX. Li, GJ. Cai, GF. Zhu. (2020).
     Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
-    \textit{Journal of Cleaner Production}. \textit{Accepted}, 123418.
+    \textit{Journal of Cleaner Production}. \textit{278}, 123418.
     \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 7.246]
 \item
     P. Jia, XX. Cao, HX. Yang, \Shaoqing, P. He, GL. Huang, T. Wu, YG. Wang. (2020).
@@ -121,6 +131,10 @@
 %\begin{etaremune}
 \begin{enumerate}
 \item
+     任引, 郑小曼, {\heiti{戴劭勍}}, 陈奇, 左舒翟.
+     结合源解析与机器学习以提升森林生物量的估算精度.
+     ({\songtix{实审}}).
+\item
      任引, {\heiti{戴劭勍}}, 左舒翟, 郑小曼.
      一种多源数据融合的森林资源清查生物量估算模型.
      ({\songtix{实审}}).
@@ -192,6 +206,11 @@
 \subsection*{\texorpdfstring{\faBook\ 开放数据 \& 代码}{开放数据 \& 代码}}
 \begin{enumerate}
 \item
+   \Shaoqing. (2020).
+    GISerDaiShaoqing/3dmodelFJNU 1.0 (Version 1.0).
+    \textit{[Data set]}. Zenodo. 
+    \DOI{10.5281/zenodo.4277977}.
+\item
    \Shaoqing, SD. Zuo, Y.Ren. (2020).
     GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.4 (Version 0.4) .
     \textit{[Data set]}. Zenodo. 
@@ -203,20 +222,25 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing, SD. Zuo, CY. Lai, ZW. Yu, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
-    A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
+    \Shaoqing, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
+     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China.  
    \textit{Remote Sensing}.
-    (\Revision).
+    (\Submitted).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
-    \textit{Ecological Modeling}. 
-    (\Review)
+    \textit{Journal of Cleaner Production}. 
+    (\Review).
 \item
-    XM. Zheng, \Shaoqing, Q. Chen, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
-    Source Analysis of Uncertainty in Estimates of Forest Above-ground Biomass by Integrating Spatial Statistics, Machine Learning, Forest inventory Data, and Airborne LiDAR Data.
-    \textit{Method in Ecology \& Evolution}. 
-    (\Submitted).
+    XM. Zheng, \Shaoqing, Q. Chen, K. Calders, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
+    Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
+    \textit{Agricultural and Forest Meteorology}. 
+    (\Review).
+\item
+    LL. Song, \Shaoqing, Z. Cao, YP. Liu, WQ. Chen.
+    Spatiotemporal dynamics of steel resources accumulated above ground in mainland China: 1995-2030.
+    \textit{Journal of Cleaner Production}. 
+    (\Revision).
 \item
     SJ. Yang, \Shaoqing, YL Huang, P. Jia.
     Commentary: Substantial undocumented infection facilitates the rapid dissemination of novel coronavirus (SARS-CoV2).
