--- a/talk.tex
+++ b/talk.tex
@@ -2,6 +2,11 @@
 \begin{etaremune}
 \item
     \Shaoqing\
+    What is geography? From coronavirus disease 2019 to Bei Dou Systems.
+    \textit{Lecture for Geography in high school}, Tong An No.1 High School of Fujian, China.
+    Aug.. 7, 2020.
+\item
+    \Shaoqing\
     The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics.
     \textit{11th Chinese R Language Conference, Renmin University of China}, Beijing, China.
     May. 27, 2018.
