--- a/publications.tex
+++ b/publications.tex
@@ -13,9 +13,19 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    \Shaoqing, JJ. Li, WE. Yang, FY. Chen, HX. Jiang. (2020).
+    The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
+    \textit{Shanghai Urban Planning Review}. \textit{05}, 22-29.
+    \DOI{10.11982/j.supr.20200504}. [in Chinese] 
+\item
+    P. Jia, \Shaoqing,K. E. Rohli, R.V. Rohli, YN. Ma, C. Yu, XF. Pan, WQ. Zhou. (2020).
+    Natural environment and childhood obesity: A systematic review.
+    \textit{Obesity Reviews}. 1-9.
+    \DOI{10.1111/obr.13097}. [SCI, IF = 7.31]
+\item
     XF. Pan, H. Li, LX. Zhao, XR. Yang, JQ. Su, \Shaoqing, J. Ning, CX. Li, GJ. Cai, GF. Zhu. (2020).
     Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
-    \textit{Journal of Cleaner Production}. \textit{Accepted}, 123418.
+    \textit{Journal of Cleaner Production}. \textit{278}, 123418.
     \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 7.246]
 \item
     P. Jia, XX. Cao, HX. Yang, \Shaoqing, P. He, GL. Huang, T. Wu, YG. Wang. (2020).
@@ -120,9 +130,13 @@
 %\begin{etaremune}
 \begin{enumerate}
 \item
+     Y. Ren, XM. Zheng, \Shaoqing, Q.Chen, SD. Zuo.
+     Improving the accuracy of forest biomass estimate using source analysis and machine learning.
+     (\Review).
+\item
      Y. Ren, \Shaoqing, SD. Zuo, XM. Zheng.
      A forest inventory biomass estimation model by multi-sources data fusion.
-     (\Review)
+     (\Review).
 \item
      Q. Chen, Y. Ren, XM. Zheng, SD. Zuo, \Shaoqing.
      A mixed-effect model for estimation of large area subtropical forest biomass.
@@ -191,6 +205,11 @@
 \subsection*{\texorpdfstring{\faBook\ Open Dataset \& Code}{Open Dataset \& Code}}
 \begin{enumerate}
 \item
+   \Shaoqing. (2020).
+    GISerDaiShaoqing/3dmodelFJNU 1.0 (Version 1.0).
+    \textit{[Data set]}. Zenodo. 
+    \DOI{10.5281/zenodo.4277977}.
+\item
    \Shaoqing, SD. Zuo, Y.Ren. (2020).
     GISerDaiShaoqing/Urban-Carbon-Dioxide-sources-gridded-maps-and-its-detemination-in-Jinjiang-city 0.4 (Version 0.4) .
     \textit{[Data set]}. Zenodo. 
@@ -202,20 +221,25 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing, SD. Zuo, CY. Lai, ZW. Yu, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
-    A framework for uncertainty propagation in gridded maps of CO$_2$ emissions: a case study of Jinjiang city, China.  
+    \Shaoqing, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
+     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China.  
    \textit{Remote Sensing}.
-    (\Revision).
+    (\Submitted).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
-    \textit{Ecological Modeling}. 
+    \textit{Journal of Cleaner Production}. 
     (\Review).
 \item
-    XM. Zheng, \Shaoqing, Q. Chen, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
-    Source Analysis of Uncertainty in Estimates of Forest Above-ground Biomass by Integrating Spatial Statistics, Machine Learning, Forest inventory Data, and Airborne LiDAR Data.
-    \textit{Method in Ecology \& Evolution}. 
-    (\Submitted).
+    XM. Zheng, \Shaoqing, Q. Chen, K. Calders, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
+    Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
+    \textit{Agricultural and Forest Meteorology}. 
+    (\Review).
+\item
+    LL. Song, \Shaoqing, Z. Cao, YP. Liu, WQ. Chen.
+    Spatiotemporal dynamics of steel resources accumulated above ground in mainland China: 1995-2030.
+    \textit{Journal of Cleaner Production}. 
+    (\Revision).
 \item
     SJ. Yang, \Shaoqing, YL Huang, P. Jia.
     Commentary: Substantial undocumented infection facilitates the rapid dissemination of novel coronavirus (SARS-CoV2).
