--- a/cnlatex/activities.tex
+++ b/cnlatex/activities.tex
@@ -3,7 +3,7 @@
 \mycvitemac{自2019}{GeoDa Center, rgeoda, libgeoda Github项目组}{\songti{贡献者}}
 \mycvitemac{自2015}{微信公众号'一览众山小 可持续城市与交通'}{\songti{志愿者}}
 \mycvitemac{自2018}{阿里云栖社区}{\songti{认证专家}}
-\mycvitemac{自2020}{GIS留学指南, \myurl{https://gis-info.github.io/}}{\songti{编委}}
+\mycvitemac{自2020}{GIS留学指南}{\songti{编委}}
 \mycvitemac{2017-2019}{国际景观生态学会中国分会(IALE-China)}{\songti{会员}}
 \mycvitemac{2016-2017}{拜客绿色出行}{\songti{志愿者}}
 \mycvitemac{2013-2017}{青年地理学刊}{\songti{创刊人,主编,副主编,主编助理}}
