--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -17,7 +17,7 @@
     {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙. (2020).
     春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
     \textit{上海城市规划}. \textit{05}, 22-29.
-    \DOI{10.11982/j.supr.20200504}. [复合影响因子 = 1.865] 
+    \DOI{10.11982/j.supr.20200504}. [复合影响因子 = 2.238] 
 \item
     P. Jia, \Shaoqing,K. E. Rohli, R.V. Rohli, YN. Ma, C. Yu, XF. Pan, WQ. Zhou. (2020).
     Natural environment and childhood obesity: A systematic review.
@@ -52,7 +52,7 @@
     \Shaoqing, SD. Zuo, Y. Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. \textit{29}, 105274.
-    \DOI{10.1016/j.dib.2020.105274}. [CiteScore = 1.5]
+    \DOI{10.1016/j.dib.2020.105274}. [ESCI, CiteScore = 1.5]
 \item
     SD. Zuo, \Shaoqing, Y. Ren. (2020).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
@@ -62,7 +62,7 @@
     窦攀烽, 左舒翟, 任引, {\heiti{戴劭勍}}, 云国梁. (2019).
     气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
     {\songtix{环境科学学报}}. \textit{39}(7), 2398-2409.
-    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子 = 2.703] 
+    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, 复合影响因子 = 2.480] 
 \item
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.(2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
@@ -87,7 +87,7 @@
     {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 任引. (2018).
 	H市城区步行环境对两抢一盗警情的影响.
     {\songtix{地理科学}}.  \textit{38}(8), 1235-1244.
-    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子 = 4.803]
+    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, 复合影响因子 = 5.509]
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
@@ -97,7 +97,7 @@
     叶琴, 曾刚, {\heiti{戴劭勍}}, 王丰龙. (2018).
 	不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
     {\songtix{中国人口·资源与环境}}. \textit{28}(02), 115-122.
-    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子 = 5.428]
+    \DOI{10.12062/cpre.20170915}. [CSCD, 复合影响因子 = 6.010]
 \item
     Q. Ye, \Shaoqing, G. Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
@@ -107,7 +107,7 @@
    李苗裔, {\heiti{戴劭勍}}, 王静远, 沈振江. (2016).
 	基于政府大数据的北京城市空间发展模式分析.
     {\songtix{地理信息世界}}. \textit{23}(3), 20-26.
-    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子 = 1.026]
+    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [JST, 复合影响因子 = 1.128]
 %\end{etaremune}
 \end{enumerate}
 
@@ -225,7 +225,7 @@
     \Shaoqing, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
      Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China.  
    \textit{Remote Sensing}.
-    (\Submitted).
+    (\Review).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
