--- a/pagedown/template-zh.Rmd
+++ b/pagedown/template-zh.Rmd
@@ -23,7 +23,7 @@ Aside
 - <i class="fa fa-envelope"></i> dsq1993qingge@163.com
 - <i class="fa fa-globe"></i> [homepage](http://gisersqdai.top/mycv/)
 - <i class="fa fa-map"></i> 荷兰恩斯赫德亨格洛大街99号，7514 AE
-- <i class="fa fa-building"></i> 荷兰特温特大学地理信息与对地观测学院对地观测科学系
+- <i class="fa fa-building"></i> 荷兰特文特大学地理信息与对地观测学院对地观测科学系
 - 如果有什么需要,请通过邮件联系我.
 
 
@@ -56,7 +56,7 @@ Main
 
 教育经历 {data-icon=graduation-cap data-concise=true}
 --------------------------------------------------------------------------------
-### 特温特大学, 地理信息与对地观测学院（ITC）
+### 特文特大学, 地理信息与对地观测学院（ITC）
 
 空间数据获取与质量博士
 
@@ -97,7 +97,7 @@ Main
 
 ### D3L Tool of NASA Satellite
 
-这是一个从NASA下载卫星影像如MODIS产品，MERIS和其他产品的图形界面软件,更多信息详见http://gisersqdai.top/D3LTool/。
+这是一个从NASA下载卫星影像如MODIS产品，MERIS和其他产品的图形界面软件,更多信息详见, http://gisersqdai.top/D3LTool/。
 
 N/A
 
@@ -361,7 +361,7 @@ N/A
 
 2018-
 
-### GIS 留学指南, [gis-info](https://gis-info.github.io/)
+### GIS 留学指南
 
 编委
 
@@ -375,7 +375,7 @@ N/A
 
 N/A
 
-2017-
+2017-2019
 
 ### 拜客绿色出行
 
@@ -403,9 +403,9 @@ N/A
 
 出版物-期刊论文 {data-icon=file}
 --------------------------------------------------------------------------------
-###  . 春节期间的 PM2.5 污染短期暴露健康效应评估——以长三角地区 25 个城市为例. 
+###  春节期间的 PM2.5 污染短期暴露健康效应评估——以长三角地区 25 个城市为例. 
 
-上海城市规划. 05, 22-29. doi:10.11982/j.supr.20200504. [复合影响因子 =1.865]
+上海城市规划. 05, 22-29. doi:10.11982/j.supr.20200504. [复合影响因子 = 2.238]
 
 N/A
 
@@ -415,7 +415,7 @@ N/A
 
 ### Natural environment and childhood obesity: A systematic review
 
-Obesity Reviews. 1-9. doi:10.1111/obr.13097. [SCI, IF=7.31]
+Obesity Reviews. 1-9. doi:10.1111/obr.13097. [SCI, IF = 7.31]
 
 N/A
 
@@ -425,7 +425,7 @@ P. Jia, **SQ. Dai**,K. E. Rohli, R.V. Rohli, YN. Ma, C. Yu, XF. Pan, WQ. Zhou.
 
 ### Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth
 
-Journal of Cleaner Production. 278, 123418. doi:10.1016/j.jclepro.2020.123418. [SCI, IF=7.246]
+Journal of Cleaner Production. 278, 123418. doi:10.1016/j.jclepro.2020.123418. [SCI, IF = 7.246]
 
 N/A
 
@@ -435,7 +435,7 @@ XF. Pan, H. Li, LX. Zhao, XR. Yang, JQ. Su, **SQ. Dai**, J. Ning, CX. Li, GJ. Ca
 
 ### Green space access in the neighbourhood and childhood obesity
 
-Obesity Reviews. 1-12. doi:10.1111/obr.13100. [SCI, IF=7.31]
+Obesity Reviews. 1-12. doi:10.1111/obr.13100. [SCI, IF = 7.31]
 
 N/A
 
@@ -445,7 +445,7 @@ P. Jia, XX. Cao, HX. Yang, **SQ. Dai**, P. He, GL. Huang, T. Wu, YG. Wang.
 
 ### Neighbourhood speed limit and childhood obesity
 
-Obesity Reviews. 1-11. doi:10.1111/obr.13052. [SCI, IF=7.31]
+Obesity Reviews. 1-11. doi:10.1111/obr.13052. [SCI, IF = 7.31]
 
 N/A
 
@@ -455,7 +455,7 @@ MY. Luo, HQ. Li, XF. Pan, T. Fei, **SQ. Dai**, Q. Ge, YX. Zou, H. Vos, JY. Luo, 
 
 ### Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity
 
-Journal of Analytical and Applied Pyrolysis. 150, 104866. doi:10.1016/j.jaap.2020.104866. [SCI, IF=3.905]
+Journal of Analytical and Applied Pyrolysis. 150, 104866. doi:10.1016/j.jaap.2020.104866. [SCI, IF = 3.905]
 
 N/A
 
@@ -465,7 +465,7 @@ SY. Xie, GW. Yu, CX. Li, J. Li, G. Wang, **SQ. Dai**, Y. Wang.
 
 ### Access to bike lanes and childhood obesity: A systematic review and meta‐analysis.
 
-Obesity Reviews. 2020, 1-11. doi:10.1111/obr.13042. [SCI, IF=7.31]. 
+Obesity Reviews. 2020, 1-11. doi:10.1111/obr.13042. [SCI, IF = 7.31]. 
 
 N/A
 
@@ -475,7 +475,7 @@ XF. Pan, L. Zhao, JY. Luo, YH. Li, L. Zhang, T. Wu, M. Smith, **SQ. Dai**, P. Ji
 
 ### A spatial database of CO<SUB>2</SUB> emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China
 
-Data in Brief. 2020, 29, 105274. doi:10.1016/j.dib.2020.105274. [Citescore=1.5]. 
+Data in Brief. 2020, 29, 105274. doi:10.1016/j.dib.2020.105274. [ESCI, Citescore = 1.5]. 
 
 N/A
 
@@ -485,7 +485,7 @@ N/A
 
 ### More fragmentized urban form more CO<SUB>2</SUB> emissions? An comprehensive relationship from the combination analysis across different scales.
 
-Journal of Cleaner Production. 2020, 244, 118659. doi:10.1016/j.jclepro.2019.118659. [SCI, IF=7.246]. 
+Journal of Cleaner Production. 2020, 244, 118659. doi:10.1016/j.jclepro.2019.118659. [SCI, IF = 7.246]. 
 
 N/A
 
@@ -495,7 +495,7 @@ SD. Zuo, **SQ. Dai**, Y. Ren.
 
 ### 气候和土地利用/覆被变化对宁波地区生态系统产水服务的影响.
 
-环境科学学报. 2019, 39(7), 2398-2409. doi:10.13671/j.hjkxxb.2019.0122. [CSCD, 复合影响因子=2.703]. 
+环境科学学报. 2019, 39(7), 2398-2409. doi:10.13671/j.hjkxxb.2019.0122. [CSCD, 复合影响因子 = 2.480]. 
 
 N/A
 
@@ -545,7 +545,7 @@ SD. Zuo, **SQ. Dai**, YY. Li, JF. Tang, Y. Ren.
 
 ### H市城区步行环境对两抢一盗警情的影响.
 
-地理科学. 2018, 38(8), 1235-1244. doi:10.13249/j.cnki.sgs.2018.08.005. [CSCD, 复合影响因子=4.803].
+地理科学. 2018, 38(8), 1235-1244. doi:10.13249/j.cnki.sgs.2018.08.005. [CSCD, 复合影响因子 = 5.509].
 
 N/A
 
@@ -555,7 +555,7 @@ N/A
 
 ### Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
 
-Remote Sensing. 2018, 10(4), 521. doi:10.3390/rs10040521. [SCI, IF = 4.118].
+Remote Sensing. 2018, 10(4), 521. doi:10.3390/rs10040521. [SCI, IF = 4.509].
 
 N/A
 
@@ -565,7 +565,7 @@ GL. Yun, SD. Zuo, **SQ. Dai**, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, 
 
 ### 不同环境规制工具对中国节能减排技术创新的影响——基于285个地级市面板数据.
 
-中国人口·资源与环境. 2018, 28(02), 115-122. doi:10.12062/cpre.20170915. [CSCD, 复合影响因子=5.428].
+中国人口·资源与环境. 2018, 28(02), 115-122. doi:10.12062/cpre.20170915. [CSCD, 复合影响因子 = 6.010].
 
 N/A
 
@@ -575,7 +575,7 @@ N/A
 
 ### Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
 
-Chinese Journal of Population Resources and Environment. 2017, 16(1), 1-11. doi:10.1080/10042857.2017.1418273. [ESCI, CiteScore=1.9].
+Chinese Journal of Population Resources and Environment. 2017, 16(1), 1-11. doi:10.1080/10042857.2017.1418273. [ESCI, CiteScore = 1.9].
 
 N/A
 
@@ -585,7 +585,7 @@ Q. Ye, **SQ. Dai**, G. Zeng.
  
 ### 基于政府大数据的北京城市空间发展模式分析.
 
-地理信息世界. 2017, 23(3), 20-26. doi:10.3969/j.issn.1672-1586.2016.03.004. [JST, 复合影响因子=1.026].
+地理信息世界. 2017, 23(3), 20-26. doi:10.3969/j.issn.1672-1586.2016.03.004. [JST, 复合影响因子 = 1.128].
 
 N/A
 
@@ -804,7 +804,7 @@ N/A
 --------------------------------------------------------------------------------
 ###  Investigating the uncertainties propagation analysis of CO<SUB>2</SUB> emissions emissions gridded maps at the urban scales: a case study of Jinjiang city, China. : a case study of Jinjiang city, China.
 
-Remote Sensing. [提交].
+Remote Sensing. [审稿].
 
 N/A
 
