--- a/publications.tex
+++ b/publications.tex
@@ -51,7 +51,7 @@
     \Shaoqing, SD. Zuo, Y. Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. \textit{29}, 105274.
-    \DOI{10.1016/j.dib.2020.105274}. [CiteScore = 1.5]
+    \DOI{10.1016/j.dib.2020.105274}. [ESCI, CiteScore = 1.5]
 \item
     SD. Zuo, \Shaoqing, Y. Ren. (2020).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
@@ -224,7 +224,7 @@
     \Shaoqing, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
      Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China.  
    \textit{Remote Sensing}.
-    (\Submitted).
+    (\Review).
 \item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
