--- a/abstracts.tex
+++ b/abstracts.tex
@@ -1,6 +1,10 @@
 \section*{Meeting Abstracts \& Papers}
 \begin{etaremune}
 \item
+    \Shaoqing, JJ. Li, WE. Yang, FY. Chen, HX. Jiang. (2020).
+    The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
+    Abstract prerensted at the Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance, Xiamen, China.
+\item
     \Shaoqing, SD. Zuo, \& Y. Ren. (2018).
     High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale.
     Abstract 37 presented at the 13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018), Beijing, China.
