--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,10 +14,15 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    \Shaoqing\CF, Y. Ren, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen.
+    Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
+    \textit{Remote Sensing}. \textit{12}(23), 3932.
+    \DOI{10.3390/rs12233932}. [SCI, IF = 4.509]
+\item
     {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙. (2020).
     春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
     \textit{上海城市规划}. \textit{05}, 22-29.
-    \DOI{10.11982/j.supr.20200504}. [复合影响因子 = 2.238] 
+    \DOI{10.11982/j.supr.20200504}. [T3期刊,复合影响因子 = 2.238] 
 \item
     P. Jia, \Shaoqing,K. E. Rohli, R.V. Rohli, YN. Ma, C. Yu, XF. Pan, WQ. Zhou. (2020).
     Natural environment and childhood obesity: A systematic review.
@@ -158,6 +163,10 @@
 \subsection*{\texorpdfstring{\faBook\ 会议论文 \& 摘要}{会议论文 \& 摘要}}
 \begin{enumerate}
 \item
+    {\heiti{戴劭勍}}, 李佳佳, 杨维旭, 陈方煜, 江辉仙. (2020).
+    春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例.
+    \textit{第十六次空间行为与规划研究会暨数字化与精细化治理学术研讨会, abstract}
+\item
     JJ. Li, YP. Liu, \Shaoqing, KY. Xiang, HX. Jiang, WQ. Chen. (2019).
     The night light uncovers city's weight—A case study on estimating construction materials in Fuzhou, China.
     \textit{10th International Conference on Industrial Ecology, abstract 320}
@@ -192,7 +201,7 @@
 \item
     {\heiti{戴劭勍}}, 江辉仙, 李佳佳, 苏娴, 吴娟, 陈焜. (2016).
     基于WalkScore与CGT模型的环境犯罪学分析：以H市为例.
-    \textit{时空间行为与城市社会规划研究暨第十二次空间行为与规划研讨会, abstract}.
+    \textit{第十二次空间行为与规划研究会暨时空间行为与城市社会规划研究学术研讨会, abstract}.
 \item
     \Shaoqing, HX. Jiang, JJ. Li, QW. Xu. (2016).
     Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District.
@@ -222,11 +231,6 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
-     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China.  
-   \textit{Remote Sensing}.
-    (\Review).
-\item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
     \textit{Journal of Cleaner Production}. 
@@ -235,12 +239,12 @@
     XM. Zheng, \Shaoqing, Q. Chen, K. Calders, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
     Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
     \textit{Agricultural and Forest Meteorology}. 
-    (\Review).
+    (\Revision).
 \item
     LL. Song, \Shaoqing, Z. Cao, YP. Liu, WQ. Chen.
     Spatiotemporal dynamics of steel resources accumulated above ground in mainland China: 1995-2030.
     \textit{Journal of Cleaner Production}. 
-    (\Revision).
+    (\Review).
 \item
     SJ. Yang, \Shaoqing, YL Huang, P. Jia.
     Commentary: Substantial undocumented infection facilitates the rapid dissemination of novel coronavirus (SARS-CoV2).
@@ -251,5 +255,10 @@
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Hydrology}.
     (\Revision).
+\item
+    SD. Zuo, LP. Yang, PF. Dou, H. Chak Ho, \Shaoqing, WJ. Ma, Y. Ren, CR. Huang.
+    The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
+    \textit{Science of the Total Environment}.
+    (\Review).
 %\end{etaremune}
 \end{enumerate}
