--- a/publications.tex
+++ b/publications.tex
@@ -13,6 +13,11 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    \Shaoqing\CF, Y. Ren, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen.
+    Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
+    \textit{Remote Sensing}. \textit{12}(23), 3932.
+    \DOI{10.3390/rs12233932}. [SCI, IF = 4.509]
+\item
     \Shaoqing, JJ. Li, WE. Yang, FY. Chen, HX. Jiang. (2020).
     The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
     \textit{Shanghai Urban Planning Review}. \textit{05}, 22-29.
@@ -157,6 +162,10 @@
 \subsection*{\texorpdfstring{\faBook\ Conference Paper \& Abstract}{Conference Paper \& Abstract}}
 \begin{enumerate}
 \item
+    \Shaoqing, JJ. Li, WE. Yang, FY. Chen, HX. Jiang. (2020).
+    The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
+    \textit{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance, abstract}
+\item
     JJ. Li, YP. Liu, \Shaoqing, KY. Xiang, HX. Jiang, WQ. Chen. (2019).
     The night light uncovers city’s weight—A case study on estimating construction materials in Fuzhou, China.
     \textit{10th International Conference on Industrial Ecology, abstract 320}
@@ -221,11 +230,6 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen, Y. Ren.
-     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China.  
-   \textit{Remote Sensing}.
-    (\Review).
-\item
     \Shaoqing\CF, XM. Zheng, L. Gao, CD. Xu, SD. Zuo, Q. Chen, XH. Wei, Y. Ren.
     Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
     \textit{Journal of Cleaner Production}. 
@@ -234,12 +238,12 @@
     XM. Zheng, \Shaoqing, Q. Chen, K. Calders, CD. Xu, XH. Wei, MZ. Zhuang, Y. Ren.
     Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
     \textit{Agricultural and Forest Meteorology}. 
-    (\Review).
+    (\Revision).
 \item
     LL. Song, \Shaoqing, Z. Cao, YP. Liu, WQ. Chen.
     Spatiotemporal dynamics of steel resources accumulated above ground in mainland China: 1995-2030.
     \textit{Journal of Cleaner Production}. 
-    (\Revision).
+    (\Review).
 \item
     SJ. Yang, \Shaoqing, YL Huang, P. Jia.
     Commentary: Substantial undocumented infection facilitates the rapid dissemination of novel coronavirus (SARS-CoV2).
@@ -250,5 +254,10 @@
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Hydrology}.
     (\Revision).
+\item
+    SD. Zuo, LP. Yang, PF. Dou, H. Chak Ho, \Shaoqing, WJ. Ma, Y. Ren, CR. Huang.
+    The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
+    \textit{Science of the Total Environment}.
+    (\Review).
 %\end{etaremune}
 \end{enumerate}
