--- a/skills.tex
+++ b/skills.tex
@@ -3,5 +3,5 @@
 \begin{tabular}{p{0.16\textwidth} p{0.84\textwidth}}
 \textbf{Major} & GIScience, Remote Sensing, Health Geography, Spatial Statistics, Urban Studies, Environments, Ecological Modelling, Landscape Ecology\\
 \textbf{Programming} & R, Python, CGA, Shell, LaTeX, Makrdown, Github \\
-\textbf{Expertise} & ArcGIS, ENVI, Erdas Image, PostGIS, City Engine \\
+\textbf{Expertise} & ArcGIS, ENVI, Erdas Image, City Engine \\
 \end{tabular}
