--- a/talk.tex
+++ b/talk.tex
@@ -2,6 +2,12 @@
 \begin{etaremune}
 \item
     \Shaoqing\
+    The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta(online).
+    \textit{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance, Xiamen University}, Xiamen, China.
+    Dem. 12, 2020.
+    \invited
+\item
+    \Shaoqing\
     What is geography? From coronavirus disease 2019 to Bei Dou Systems.
     \textit{Lecture for Geography in high school}, Tong An No.1 High School of Fujian, China.
     Aug.. 7, 2020.
