--- a/cnlatex/skills.tex
+++ b/cnlatex/skills.tex
@@ -3,5 +3,5 @@
 \begin{tabular}{p{0.16\textwidth} p{0.84\textwidth}}
 \textbf{\songti{主修课程}} & 地理信息科学, 遥感, 健康地理, 空间统计, 城市研究, 环境, 生态模型, 景观生态\\
 \textbf{\songti{编程}} & R, Python, CGA, Shell, LaTeX, Makrdown, Github \\
-\textbf{\songti{专业软件}} & ArcGIS, ENVI, Erdas Image, PostGIS, City Engine \\
+\textbf{\songti{专业软件}} & ArcGIS, ENVI, Erdas Image, City Engine \\
 \end{tabular}
