--- a/cnlatex/presentation.tex
+++ b/cnlatex/presentation.tex
@@ -1,6 +1,6 @@
 \section{\texorpdfstring{\faCommentsO\ 汇报}{汇报}}
 \mycvitemXP{2020.12.12}{\songti{春节期间的PM2.5污染短期暴露健康效应评估——以长三角地区25个城市为例(\textbf{受邀})}}{第十六次空间行为与规划研究会暨数字化与精细化治理学术研讨会}{中国,厦门大学}
-\mycvitemXP{2020.08.07}{\songti{什么是地理学——从新冠疫情到北斗卫星}}{\songtix{同安第一中学地理组}}{中国,福建省同安第一中学}
+\mycvitemXP{2020.08.07}{\songti{什么是地理学——从新冠疫情到北斗卫星(\textbf{受邀})}}{\songtix{同安第一中学地理组}}{中国,福建省同安第一中学}
 \mycvitemXP{2018.05.27}{\songti{地理要素的尺度,分区效应,可变面积单元问题与空间统计的挑战}}{\songtix{第十一届中国R语言会议}}{中国,北京人民大学}
 \mycvitemXP{2018.05.22}{High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale}{13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018)}{中国,北京国家会议中心}
 \mycvitemXP{2017.11.11}{\songti{城市形态的PM2.5环境效应——以京津冀城市群为例}}{\songtix{第九届中国景观生态学学术研讨会}}{中国,广州三寓宾馆}
