--- a/pagedown/cv.Rmd
+++ b/pagedown/cv.Rmd
@@ -99,7 +99,7 @@ Shaoqing Dai {#title}
 
 ```{r}
 # Note the special double pipe so we modify the CV object in place
-CV %<>% print_text_block("intro") 
+#CV %<>% print_text_block("intro") 
 ```
 
 
