--- a/cnlatex/publications.tex
+++ b/cnlatex/publications.tex
@@ -14,7 +14,12 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing\CF, Y. Ren, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen.
+    SD. Zuo, LP. Yang, PF. Dou, H. Chak Ho, \Shaoqing, WJ. Ma, Y. Ren, CR. Huang. (2020).
+    The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
+    \textit{Science of the Total Environment}. \textit{764}, 144609.
+    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 6.551].
+\item
+    \Shaoqing\CF, Y. Ren, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen. (2020).
     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
     \textit{Remote Sensing}. \textit{12}(23), 3932.
     \DOI{10.3390/rs12233932}. [SCI, IF = 4.509]
@@ -255,10 +260,5 @@
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Hydrology}.
     (\Revision).
-\item
-    SD. Zuo, LP. Yang, PF. Dou, H. Chak Ho, \Shaoqing, WJ. Ma, Y. Ren, CR. Huang.
-    The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
-    \textit{Science of the Total Environment}.
-    (\Review).
 %\end{etaremune}
 \end{enumerate}
