--- a/publications.tex
+++ b/publications.tex
@@ -13,7 +13,12 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing\CF, Y. Ren, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen.
+    SD. Zuo, LP. Yang, PF. Dou, H. Chak Ho, \Shaoqing, WJ. Ma, Y. Ren, CR. Huang. (2020).
+    The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
+    \textit{Science of the Total Environment}. \textit{764}, 144609.
+    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 6.551].
+\item
+    \Shaoqing\CF, Y. Ren, SD. Zuo, CY. Lai, JJ. Li, SY. Xie, BC. Chen. (2020).
     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
     \textit{Remote Sensing}. \textit{12}(23), 3932.
     \DOI{10.3390/rs12233932}. [SCI, IF = 4.509]
@@ -58,7 +63,7 @@
     \textit{Data in Brief}. \textit{29}, 105274.
     \DOI{10.1016/j.dib.2020.105274}. [ESCI, CiteScore = 1.5]
 \item
-    SD. Zuo, \Shaoqing, Y. Ren. (2020).
+    SD. Zuo, \Shaoqing, Y. Ren. (2019).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
     \textit{Journal of Cleaner Production}. \textit{244}, 118659.
     \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 7.246]
@@ -254,10 +259,5 @@
     Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
     \textit{Journal of Hydrology}.
     (\Revision).
-\item
-    SD. Zuo, LP. Yang, PF. Dou, H. Chak Ho, \Shaoqing, WJ. Ma, Y. Ren, CR. Huang.
-    The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
-    \textit{Science of the Total Environment}.
-    (\Review).
 %\end{etaremune}
 \end{enumerate}
